# sekailink

./: .dockerignore  .env.template  .gitignore  BUGS_FIXED.md  BUGS_FOUND.md  BaseClasses.py  CHANGELOG.md  CLAUDE.md  CLIENT_AUTOLAUNCH_RAW.json  CLIENT_EXTERNAL_PATCH_URLS.json  CommonClient.py  DEPLOYMENT_COMPLETE.md  ENVIRONMENT_VALIDATION.md  ENV_SETUP.md  Generate.py  IMPLEMENTATION_SUMMARY.md  LICENSE  Launcher.py  MULTIWORLD_INTEGRATION_PLAN.md  Main.py  ModuleUpdate.py  MultiServer.py  NetUtils.py  OAUTH_FIX.md  OptionsCreator.py  PHASE10_COMPLETE.md  PHASE10_FINAL_SESSION_SUMMARY.md  PHASE10_INTEGRATION_PLAN.md  PHASE10_OVERALL_STATUS.md  PHASE10_PART2_SUMMARY.md  PHASE10_PART3_SUMMARY.md  PHASE10_SESSION_SUMMARY.md  PHASE10_USER_GUIDE.md  PHASE11_FIXES.md  PHASE9_FIXES_PART1.md  PHASE9_PROGRESS.md  PHASE9_SESSION_SUMMARY.md  PROGRESS.md  README.md  ROM_MANAGEMENT.md  (+25 more)
apps/client-core/native-bootloader/: CMakeLists.txt
apps/sekaiemu/: ALTTP_PRIVATE_ROOM_LINK_FLOW.md  CHANGELOG.md  CMakeLists.txt  README.md  README_BUILD_LINUX.md
apps/sekaiemu/LICENSES/: README.md  libretro-api.txt
apps/sekaiemu/docs/: ALTTP_TRACKER_BUNDLE_AUDIT.md  ALTTP_TRACKER_STARTING_POINT.md  NEXT_TRACKER_DESIGN_PASS.md  SEKAIEMU_REFACTOR_MAP.md  TRACKER_BETA3_RUNTIME_BOUNDARY.md  TRACKER_HEADLESS_DESIGN_NOTES.md
apps/sekaiemu/profiles/: alttp-starter.profile  ff4fe-heartbeat.profile  firered-starter.profile  ladx-starter.profile  oot-midos.profile  tloz-starter.profile
apps/sekaiemu/src/: activity_feed_window_presenter.cpp  activity_feed_window_presenter.hpp  audio_output.cpp  audio_output.hpp  bridge_ipc.cpp  bridge_ipc.hpp  bridge_runtime_status.hpp  bridge_terminal_presenter.cpp  bridge_terminal_presenter.hpp  bug_report_client.cpp  bug_report_client.hpp  core_option_manager.cpp  core_option_manager.hpp  core_option_manager_utils.cpp  host_io_utils.cpp  host_io_utils.hpp  imgui_runtime.cpp  imgui_runtime.hpp  imgui_tracker_renderer.cpp  imgui_tracker_renderer.hpp  input_capture_mode.cpp  input_capture_mode.hpp  input_script.cpp  input_script.hpp  input_script_smoke.cpp  input_state.cpp  input_state.hpp  input_state_config.cpp  input_state_internal.hpp  input_state_menu.cpp  launch_options.cpp  launch_options.hpp  launch_options_smoke.cpp  launcher.cpp  launcher.hpp  layout_preview.cpp  layout_preview.hpp  legacy_bridge_commands.cpp  legacy_bridge_commands.hpp  legacy_bridge_watchers.cpp  (+185 more)
apps/sekaiemu/tests/: README.md
apps/sekaiemu/tools/: audit_alttp_tracker_bundle.sh  render_alttp_tracker_preview.sh
apps/sekaiemu/tracker-bundles/: README.md
runtime/native/sekailink_runtime/: CMakeLists.txt
services/link-room/: CMakeLists.txt  CURRENT_SOURCE_ROOTS.md  EXTRACTION_STATUS.md  README.md
services/link-room/docs/: room-linkedworld-surface-server-first.md  room-server-alttp-live-runbook.md  room-server-archipelago-alignment.md  room-server-field-test-readiness-2026-05-21.md  room-server-first-external-test.md  room-server-live-deployment-checklist.md  room-server-live-test.md  room-server-nexus-room-query-chain.md  room-server-private-live-promotion.md  room-server-private-live-staging.md  room-server-soh-vertical.md  room-sklmi-tracker-flow.md  server-link.md
services/link-room/include/: admin_agent.hpp  multiserver_semantics.hpp  room_linkedworld.hpp  room_projection.hpp  room_projection_factory.hpp  room_projection_query.hpp  room_projection_restore.hpp  room_seed_package_dispatch.hpp  room_server_config.hpp  room_server_http.hpp  room_session.hpp  room_state.hpp
services/link-room/source-snapshots/: README.md
services/link-room/src/: lobby_runtime_service.cpp  lobby_runtime_service_smoke_main.cpp  multiserver_semantics.cpp  multiserver_semantics_smoke_main.cpp  room_audit_store.cpp  room_linkedworld.cpp  room_linkedworld_surface_smoke_main.cpp  room_projection.cpp  room_projection_mysql_smoke_main.cpp  room_projection_smoke_main.cpp  room_registry.cpp  room_restore.cpp  room_restore_smoke_main.cpp  room_seed_package_dispatch.cpp  room_seed_package_dispatch_main.cpp  room_seed_package_dispatch_smoke_main.cpp  room_seed_package_dispatch_tcp_smoke_main.cpp  room_server_config.cpp  room_server_http.cpp  room_server_http_auth_smoke_main.cpp  room_server_http_smoke_main.cpp  room_server_http_tcp_smoke_main.cpp  room_server_node.cpp  room_server_projection_restore_daemon_smoke_main.cpp  room_server_protocol.cpp  room_server_protocol_auth_smoke_main.cpp  room_server_protocol_smoke_main.cpp  room_server_service_main.cpp  room_server_service_smoke_main.cpp  room_server_tcp.cpp  room_server_tcp_smoke_main.cpp  room_session.cpp  room_session_smoke_main.cpp  room_state.cpp  room_state_smoke_main.cpp
services/sklmi/: CMakeLists.txt  CURRENT_SOURCE_ROOTS.md  EXTRACTION_STATUS.md  README.md
services/sklmi/docs/: ALTTP_REFERENCE_ALIGNMENT.md  ALTTP_RUNTIME_RECIPE.md  ARCHIPELAGO_LIVE_PROBE_2026-05-21.md  GAME_SERVER_RUNTIME_FLOW.md  LINKEDWORLD_OWNERSHIP_BOUNDARY.md  LOCAL_CHANGELOG.md  MANIFEST_CONTRACT.md  PHASE0_INTEGRATION_START.md  PHASE1_EXECUTION_PLAN.md  PHASE1_RUNTIME_OWNERSHIP.md  PHASE2_EXECUTION_PLAN.md  PHASE3_EXECUTION_PLAN.md  PHASE4_HANDOFF_2026-04-24.md  PRIVATE_LINK_ROOM_STAGING.md  REPO_STRUCTURE.md  ROOM_METADATA_FLOW.md  SNI_ALIGNMENT.md
services/sklmi/manifests/: alttp.phase1.json  ladx.phase1.json
services/sklmi/scripts/: sklmi_link_room_private.env.example  sklmi_link_room_stage.sh  sync_alttp_runtime_manifest.sh
services/sklmi/src/: api_archipelago.cpp  api_archipelago_websocket.cpp  api_bridge_runtime.cpp  api_bridge_runtime_helpers.hpp  api_common.cpp  api_internal.hpp  api_manifest.cpp  api_room.cpp  api_socket_memory.cpp  bug_report_client.cpp  bug_report_client.hpp  runtime_jsonl_sink.cpp  runtime_jsonl_sink.hpp  runtime_main.cpp  runtime_options.cpp  runtime_options.hpp  tracker_headless_runtime.cpp  tracker_headless_runtime.hpp  tracker_headless_runtime_bundle_model.inc  tracker_headless_runtime_commands.inc  tracker_headless_runtime_file_detail.inc  tracker_headless_runtime_item_detail.inc  tracker_headless_runtime_json_fields.inc  (+10 more)
(+5748 files in other folders)
